[package]
name = "rdrive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["full"] }
rayon = "1.5.3"
clap = { version = "3.2.17", features = ["derive"] }
job_scheduler = "1.2.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
